[package]
    authors       = ["Eric Evans <CireSnave@gmail.com>"]
    description   = "Macros for look_inside"
    documentation = "https://docs.rs/look_inside"
    edition       = "2021"
    homepage      = "https://docs.rs/look_inside"
    license       = "MIT"
    name          = "look_inside_derive"
    readme        = "README.md"
    repository    = "https://github.com/CireSnave/look_inside"
    version       = "0.1.0"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
    proc-macro = true

[dependencies]
    syn = { version = "2.0.43", features = ["extra-traits"] }
